<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/whiteMuda"
    tools:context=".ForgetPasswordActivity">

    <ImageView
        android:id="@+id/Gambar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/botanika"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riset"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_below="@+id/Gambar"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginTop="20dp"
        android:text="@string/forgot"
        android:textSize="20dp"/>

    <LinearLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/icround_email"
            app:endIconMode="custom"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/MyHintTextAppearance"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/etForgotPasswordEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:textSize="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ForgotPasswordSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_1"
        android:text="Send Reset Password"
        android:layout_below="@id/reset"
        android:layout_marginTop="190dp"
        android:textColor="@color/white">

    </androidx.appcompat.widget.AppCompatButton>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ForgotPasswordSubmit"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/login"/>

    </LinearLayout>


</RelativeLayout>