<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:id="@+id/Profil"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="20dp"
        android:background="@color/brown">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/botanika"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:fontFamily="@font/poppins_regular"
            android:layout_toRightOf="@+id/profile_image"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textSize="14sp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/profile_image"
            android:layout_below="@+id/full_name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-80dp"
        android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10sp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/brown"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_campus"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/uniku"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/kampus"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/fkom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:layout_below="@+id/uniku"
                    android:layout_centerHorizontal="true"
                    android:text="@string/uniku"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view2"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10sp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/brown"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_engineering"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/Jurusan"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/linkedn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:layout_below="@+id/github"
                    android:layout_centerHorizontal="true"
                    android:text="@string/teknik"/>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nama_lengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Full Name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:drawableLeft="@drawable/ic_person"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nama_lengkap2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:drawableLeft="@drawable/ic_email"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nama_lengkap3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="linkedn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NIM"
                android:drawableLeft="@drawable/ic_card"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botton"
            android:text="@string/update"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>
</LinearLayout>
