<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/whiteMuda"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/Gambar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/botanika"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Sign In"
        android:layout_below="@+id/Gambar"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/deskripsi"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi"
        android:layout_below="@+id/SignIn"/>

    <LinearLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deskripsi"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="logo_username"
            android:hint="email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/mdiuser"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="logo_username"
            android:hint="password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/mdipassword_off"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Confpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passET2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="logo_username"
            android:hint="Confirm password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/mdipassword_off"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignIn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Confpassword"
        android:background="@drawable/shape_1"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="Sign In">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or Continue With"
        android:layout_below="@id/SignIn2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/bundle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/or">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:drawableLeft="@drawable/logosfacebook"
            android:background="@drawable/shape_2"
            android:text="Login"
            android:onClick="callLogin"
            android:transitionName="transition_login"
            android:layout_marginRight="10dp"
            android:layout_weight="1">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:drawableLeft="@drawable/devicongoogle"
            android:text="Login"
            android:background="@drawable/shape_2"
            android:layout_marginLeft="5dp"
            android:layout_weight="1">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

    <TextView
        android:id="@+id/have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have"
        android:layout_below="@id/bundle"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_centerHorizontal="true">
    </TextView>

    <TextView
        android:id="@+id/baru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_medium"
        android:layout_below="@+id/have"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@id/baru"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_3"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>